# bot-trading

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  PAUSE.md  README.md  main.py  pyproject.toml
.claude/: settings.local.json
config/: ai_analysis_config.yaml  paper_config.yaml
docs/: ai-integration-guide.md
docs/superpowers/plans/: 2025-03-14-phase-0-foundation-api.md  2026-03-14-paper-trading-bot-scaffold.md  2026-03-14-phase-2-ai-integration-data-pipeline.md  2026-03-14-phase-3-live-trading-gui.md  2026-03-14-phase1-indicators.md
docs/superpowers/specs/: 2025-03-14-trading-analysis-tool-design.md  2026-03-14-phase-3-live-trading-gui-design.md  2026-03-14-phase1-indicators-design.md  2026-03-14-readme-redesign-design.md
examples/: read_config_example.py
src/bot_trading/: __init__.py  cli.py  config.py  exceptions.py
src/bot_trading/ai/: analyzer.py  client.py  prompts.py  schema.py  validator.py
src/bot_trading/controllers/: __init__.py  app_controller.py  settings_controller.py  trading_controller.py
src/bot_trading/core/: __init__.py  data_store.py  notification_manager.py  state_manager.py
src/bot_trading/data/: models.py  pipeline.py
src/bot_trading/execution/: executor.py
src/bot_trading/gui/: __init__.py  main_window.py
src/bot_trading/providers/: __init__.py  alpaca.py  base.py  mock.py
src/bot_trading/risk/: __init__.py  limits.py  scoring.py
tests/: __init__.py  test_cli.py  test_config.py  test_exceptions.py  test_executor.py  test_risk_limits.py  test_strategy_base.py
tests/ai/: __init__.py  test_analyzer.py  test_client.py  test_prompts.py  test_schema.py  test_validator.py
tests/controllers/: test_app_controller.py  test_settings_controller.py  test_trading_controller.py
tests/core/: test_data_store.py  test_notification_manager.py  test_state_manager.py
tests/data/: __init__.py  test_models.py  test_pipeline.py
tests/gui/: test_main_window.py  test_portfolio_panel.py
tests/integration/: test_alpaca_integration.py
tests/risk/: __init__.py  test_scoring.py
tests/test_providers/: test_alpaca.py  test_alpaca_historical_bars.py  test_alpaca_order_history.py  test_base.py  test_base_abstract_methods.py  test_base_models.py  test_mock.py
(+6 files in other folders)
