[project]
name = "bot-trading"
version = "0.2.0"
description = "AI Trading Risk Analyzer — One-click risk analysis for trading decisions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "alpaca-py>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-qt>=4.2.0",  # For Qt testing
    "ruff>=0.1.0",
]

analysis = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

gui = [
    "PyQt6>=6.6.0",
    "pyqtgraph>=0.13.0",  # Charts
]

# Full installation includes dev + analysis + gui
all = [
    "bot-trading[dev,analysis,gui]",
]

# Note: alpaca-py is in main dependencies above (required for provider to work)
# Use: pip install -e ".[dev]" to get dev dependencies
# Use: pip install -e ".[gui]" to get GUI dependencies
# Use: pip install -e ".[all]" to get all dependencies

[project.scripts]
bot-trading = "bot_trading.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
